[package]
name = "wordpiece_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "wordpiece_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
unicode-normalization = "0.1"
regex = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }

[[bench]]
name = "tokenizer_benchmark"
harness = false
