[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wordpiece_rs"
version = "0.1.0"
description = "A fast WordPiece tokenizer implementation in Rust with Python bindings"
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "tokenizer", "wordpiece", "rust", "machine-learning"]

[project.optional-dependencies]
test = [
    "behave>=1.2.6",
    "pytest>=7.0.0",
]
benchmark = [
    "transformers>=4.0.0",
    "pandas>=1.0.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/novastar53/wordpiece-rs"
Repository = "https://github.com/novastar53/wordpiece-rs"
Documentation = "https://github.com/novastar53/wordpiece-rs#readme"